--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -262,34 +262,19 @@ main-header {
 /* variable dark-theme */
 
 /* scroll-up */
-.scrollup{
-    position: fixed;
-    right: 1rem;
-    bottom: 1rem;
-    background-color: var(--first-color);
-    opacity: .8;
-    padding: 0 .3rem;
-    border-radius: .4rem;
-    -webkit-border-radius: .4rem;
-    -moz-border-radius: .4rem;
-    -ms-border-radius: .4rem;
-    -o-border-radius: .4rem;
-    z-index: var(--z-tooltip);
-    transition: .4s;
-    -webkit-transition: .4s;
-    -moz-transition: .4s;
-    -ms-transition: .4s;
-    -o-transition: .4s;
-}
-
-.scrollup:hover {
-    background-color: var(--first-color);
-}
 .scrollup_icon{
     font-size: 1.5rem;
     color: #fff;
 }
 
-.show-scroll {
+#myBtn {
+    position: fixed;
+    right: 1rem;
     bottom: 1rem;
+    background-color: var(--first-color);
+    padding:  0 .3rem;
 }
+  
+  #myBtn:hover {
+    background-color: var(--first-color);
+  }
